Fixed part of the event overlap issue

--- a/css/jquery.timespace.dark.css
+++ b/css/jquery.timespace.dark.css
@@ -101,18 +101,18 @@
 	.jqTimepsaceContainer thead th:not(:first-child) {
 		border-left: 1px solid #b4b4b4;
 	}
-	.jqTimepsaceContainer tbody td {
-		border-right: 1px dashed #575757;
-		height: 100%;
-		min-height: 6.25rem;
-		vertical-align: top;
-	}
 	.jqTimepsaceContainer thead th.jqTimespaceDummySpan {
 		background: #22252c;
 		opacity: 0.4;
 	}
 	.jqTimepsaceContainer thead th.jqTimespaceDummySpan:not(:first-child) {
 		border-left: 1px solid #6b6b6b;
+	}
+	.jqTimepsaceContainer tbody td {
+		border-right: 1px dashed #575757;
+		height: 100%;
+		min-height: 6.25rem;
+		vertical-align: top;
 	}
 	
 /* Event Box */
@@ -122,8 +122,7 @@
 	margin: 1rem 0 2rem 0;
 	border-left: 1px solid #474747;
 	padding-top: 1.3rem;
-	min-width: 100%;
-	height: 100%;
+	white-space: nowrap;
 }
 	.jqTimepsaceContainer .jqTimespaceEvent:hover {
 		border-left: 1px dashed #8a8a8a;
@@ -138,7 +137,9 @@
 		border: 1px solid #818181;
 		border-radius: 0.2rem 0.6rem 0.6rem 0.2rem;
 		padding: 0.5rem 0.3rem;
-		min-width: 100%;
+		height: 2.5rem;
+		line-height: 1.25rem;
+		font-size: 1rem;
 		cursor: pointer;
 		background: #282c34;
 		transition: all 0.3s ease-in;
