--- a/css/jquery.timespace.light.css
+++ b/css/jquery.timespace.light.css
@@ -26,6 +26,7 @@
 	.jqTimepsaceContainer .jqTimespaceTableContainer {
 		box-shadow: 0 6px 5px -5px #c4c4c4;
 		border: 1px solid #b4b4b4;
+		padding-bottom: 20px;
 		background: #ffffff url('../images/timespace.line.light.png') bottom 0 left 0 repeat-x;
 		-moz-user-select: none;
 		user-select: none;
@@ -101,12 +102,6 @@
 	.jqTimepsaceContainer thead th:not(:first-child) {
 		border-left: 2px solid #b4b4b4;
 	}
-	.jqTimepsaceContainer tbody td {
-		border-right: 1px dashed #d8d8d8;
-		height: 100%;
-		min-height: 6.25rem;
-		vertical-align: top;
-	}
 	.jqTimepsaceContainer thead th.jqTimespaceDummySpan {
 		background: #ececec;
 		opacity: 0.4;
@@ -114,16 +109,21 @@
 	.jqTimepsaceContainer thead th.jqTimespaceDummySpan:not(:first-child) {
 		border-left: 1px solid #6b6b6b;
 	}
+	.jqTimepsaceContainer tbody td {
+		border-right: 1px dashed #d8d8d8;
+		height: 100%;
+		min-height: 6.25rem;
+		vertical-align: top;
+	}
 	
 /* Event Box */
 .jqTimepsaceContainer .jqTimespaceEvent {
 	box-sizing: border-box;
 	position: relative;
-	margin: 1rem 0 2rem 0;
+	margin: 1rem 0 0 0;
 	border-left: 1px solid #e6e6e6;
-	padding-top: 1.3rem;
-	min-width: 100%;
-	height: 100%;
+	padding-top: 0.7rem;
+	white-space: nowrap;
 }
 	.jqTimepsaceContainer .jqTimespaceEvent:hover {
 		border-left: 1px dashed #a0a0a0;
@@ -134,11 +134,13 @@
 		box-sizing: border-box;
 		box-shadow: 3px 6px 5px -5px #999999;
 		overflow: hidden;
-		margin: 0 0 0.7rem;
+		margin: 0;
 		border: 1px solid #c0c0c0;
 		border-radius: 0.2rem 0.6rem 0.6rem 0.2rem;
-		padding: 0.5rem 0.3rem;
-		min-width: 100%;
+		padding: 0.5rem 0.5rem;
+		height: 2.5rem;
+		line-height: 1.25rem;
+		font-size: 1rem;
 		cursor: pointer;
 		background: #ffffff;
 		transition: all 0.3s ease-in;
